[package]
name = "potboiler"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]

[dependencies]
hybrid-clocks = "*"
uuid = "*"
log = "*"
log4rs = {version = ">= 0.4", features=["yaml"]}

iron = "0.3.0"
router = "*"
logger = "*"

url = "*"
postgres = "*"
schemamama = "*"
schemamama_postgres = "*"
