[package]
name = "potboiler"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]

[dependencies]
hybrid-clocks = "*"
uuid = "*"
log = "*"
log4rs = {version = ">= 0.4", features=["yaml"]}

iron = "*"
router = "*"
logger = "*"
json = "*"

url = "*"
postgres = "*"
schemamama = "*"
schemamama_postgres = "*"

r2d2 = "*"
r2d2_postgres = "*"
persistent = "*"
