[package]
name = "potboiler"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]

[[bin]]
name = "potboiler"
path = "src/main.rs"

[dependencies]
hybrid-clocks = { git = "https://github.com/palfrey/hybrid-clocks/", branch = "serde-1.0", features = ["serde"] }
uuid = {version = "0.6", features=["v4","serde"]}
log = "*"
log4rs = {version = "0.8", features=["yaml_format"]}

iron = "0.6"
iron-test = "0.6"
plugin = "0.2"
router = "0.6"
logger = "0.4"
serde = "1.0"
serde_json = "1.0"
urlencoded = "0.6"
url = "*"

potboiler_common = { path = "../potboiler_common" }

diesel = { version = "1.0", features = ["postgres", "uuid", "serde_json"] }
r2d2-diesel = "1.0"
# schemamama = "0.2"
# schemamama_postgres = "=0.2.2"

r2d2 = "0.8"
#r2d2_postgres = "0.14"
persistent = "0.3"

hyper = "0.10"
resolve = "0.1.2"
error-chain = "0.11.0"