[package]
name = "potboiler"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]
edition = "2018"

[[bin]]
name = "potboiler"
path = "src/main.rs"

[dependencies]
hybrid-clocks = { version = "^0.3.4", features = ["serde"] }
uuid = {version = "0.5", features=["v4","serde"]} # Required by Postgres
log = "*"
log4rs = {version = "0.8", features=["yaml_format"]}

iron = "0.6"
iron-test = "0.6"
plugin = "0.2"
router = "0.6"
logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
urlencoded = "0.6"
url = "*"
reqwest = "*"

potboiler_common = { path = "../potboiler_common" }

postgres = { features=["with-uuid", "with-serde_json"], version="0.15"}
schemamama = "0.3"
schemamama_postgres = "=0.2.2"

r2d2 = "0.8"
r2d2_postgres = "0.14"
persistent = "0.4"

resolve = "0.2"
error-chain = "0.12"

[dev-dependencies]
regex = "1.0"
pretty_assertions = "0.5"
serial_test = "0.1"
serial_test_derive = "0.1"
