[package]
name = "potboiler"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[[bin]]
name = "potboiler"
path = "src/main.rs"

[dependencies]
hybrid-clocks = { version = "^0.5", features = ["serialization"] }
uuid = {version = "0.5", features=["v4","serde"]} # Required by Postgres
log = "0.4"
log4rs = {version = "1", features=["yaml_format"]}

actix-web = "0.7.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "*"
reqwest = {version="0.11", features=["json", "blocking", "rustls-tls"], default_features=false}

potboiler_common = { path = "../potboiler_common" }

postgres = { features=["with-uuid", "with-serde_json"], version="0.15"}
schemamama = "0.3"
schemamama_postgres = "0.2"

r2d2 = "0.8"
r2d2_postgres = "0.14"

trust-dns-resolver = "0.21"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
regex = "1.0"
pretty_assertions = "0.5"
serial_test = "*"
serial_test_derive = "*"
env_logger = "*"