[package]
name = "kv"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]
edition = "2018"

[[bin]]
name = "kv"
path = "src/main.rs"

[dependencies]
iron = "0.6"
iron-test = "0.6"
router = "0.6"
logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hybrid-clocks = { version = "^0.3.4", features = ["serde"] }
mime = "0.2" # Can't upgrade, because iron
error-chain = "0.12"
r2d2 = "0.8"

url = "*"
potboiler_common = { path = "../potboiler_common" }
persistent = "0.4"

log = "0.4"
log4rs = {version = "0.8", features=["yaml_format"]}

reqwest = "*"
mockito = "*"

lazy_static = "1"

[dev-dependencies]
pretty_assertions = "0.5"
serial_test = "*"
serial_test_derive = "*"
env_logger = "0.6"
uuid = {version = "^0.5", features=["use_std","v4","serde"]} # Can't upgrade, because postgres
