[package]
name = "kv"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[[bin]]
name = "kv"
path = "src/main.rs"

[dependencies]
actix-web = "0.7.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hybrid-clocks = { version = "^0.3.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
r2d2 = "0.8"

url = "*"
potboiler_common = { path = "../potboiler_common" }

log = "0.4"
log4rs = {version = "0.8", features=["yaml_format"]}

reqwest = "*"

lazy_static = "1"

[dev-dependencies]
mockito = "0.14"
actix = "0.7"
pretty_assertions = "0.5"
serial_test = "*"
serial_test_derive = "*"
env_logger = "0.6"
uuid = {version = "^0.5", features=["use_std","v4","serde"]} # Can't upgrade, because postgres
potboiler = { path = "../core" }