[package]
name = "pigtail"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]
edition = "2018"

[[bin]]
name = "pigtail"
path = "src/main.rs"

[dependencies]
actix-web = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hybrid-clocks = { version = "^0.3.4", features = ["serde"] }
uuid = {version = "0.5", features=["use_std","v4","serde"]}
url = "*"
reqwest ="*"

potboiler_common = { path = "../potboiler_common" }

log = "*"
log4rs = {version = "0.8", features=["yaml_format"]}

lazy_static = "1"
time = "0.1"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
serial_test = "*"
serial_test_derive = "*"
env_logger = "0.6"
potboiler = { path = "../core" }
regex = "1.0"