[package]
name = "pigtail"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[[bin]]
name = "pigtail"
path = "src/main.rs"

[dependencies]
actix-web = "0.7.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hybrid-clocks = { version = "^0.5", features = ["serialization"] }
uuid = {version = "0.5", features=["use_std","v4","serde"]}
url = "*"
reqwest = {version="0.11", features=["json", "blocking", "rustls-tls"], default_features=false}

potboiler_common = { path = "../potboiler_common" }

log = "0.4"
log4rs = {version = "1", features=["yaml_format"]}

lazy_static = "1"
time = "0.2"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
serial_test = "*"
serial_test_derive = "*"
env_logger = "0.6"
potboiler = { path = "../core" }
regex = "1.0"