[package]
name = "potboiler_common"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
actix-net = "0.2"
actix = "0.7"
futures = "0.1"

uuid = {version = "0.5", features=["use_std","v4","serde"]} # required by Postgres
postgres = {features=["with-uuid","with-serde_json"], version="0.15"}
postgres-shared = "0.4"
r2d2 = "0.8"
r2d2_postgres = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "*"
hybrid-clocks = { version = "^0.3.4", features = ["serde"] }
regex = "*"
thiserror = "1"
anyhow = "1"

[lib]
name = "potboiler_common"
path = "src/lib.rs"

[package.metadata.raze.crates.actix-web.'0.7.18']
data_attr = """glob(["**"], exclude=["tests/test space.binary"])"""

[package.metadata.raze.crates.ring.'*']
compile_data_attr = "glob([\"**/*.der\"])"